Close 80/20 gaps: LICENSE, String.formatted, license plugin, TODO
- Add LICENSE file (Apache 2.0) — required by Maven Central; was the
  last pending governance file from VERIFICATION_SUMMARY.txt
- RenderMachineImpl.java: migrate final String.format() → String.formatted()
  completing the Java 26 idiom cleanup from CODE_QUALITY_AUDIT_2_0_0.md
- pom.xml: upgrade deprecated com.mycila.maven-license-plugin:1.6.0 to
  com.mycila:license-maven-plugin:4.5 (Maven 4 compatible)
- dtr-cli/template.py: remove redundant TODO comment (sayWarning already
  instructs users to replace placeholder data at runtime)

https://claude.ai/code/session_01DwWMbsCBwXZAuBX5ufddWN